--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <!-- HERO -->
     <section class="hero">
         <div class="card">
-            <h1>Villa Carlos Paz - CORDOBA RP</h1>
+            <h1>Villa Carlos Paz  CORDOBA RP</h1>
 
             <p>
                 Un servidor de Roleplay serio, organizado y realista dentro de ERLC.
