--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
     <!-- ACÁ ARRANCA LA PARTE NUEVA (FUERA DEL HERO) -->
     <section class="features">
-        <h2>¿Por qué jugar en Argentina RP?</h2>
+        <h2>¿Por qué jugar en Villa Carlos Paz | Cordoba RP?</h2>
 
         <div class="cards">
             <div class="feature-card">
