Update hero section and add button group

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <!-- HERO -->
     <section class="hero">
         <div class="card">
-            <h1>Villa Carlos Paz  CORDOBA RP</h1>
+            <h1>Villa Carlos Paz · CORDOBA RP</h1>
 
             <p>
                 Un servidor de Roleplay serio, organizado y realista dentro de ERLC.
@@ -26,13 +26,21 @@
                 de una comunidad activa y comprometida con el rol de calidad.
             </p>
 
-            <a href="https://discord.gg/jvGUYRPTSU" target="_blank" class="btn">
-                Unirse al Discord
-            </a>
+            <!-- BOTONES -->
+            <div class="btn-group">
+                <a href="https://discord.gg/jvGUYRPTSU" target="_blank" class="btn">
+                    Unirse al Discord
+                </a>
+
+                <a href="https://neiwitodev.github.io/CordobaRPRules/" target="_blank" class="btn btn-secondary">
+                    Reglas
+                </a>
+            </div>
+
         </div>
     </section>
 
-    <!-- ACÁ ARRANCA LA PARTE NUEVA (FUERA DEL HERO) -->
+    <!-- FEATURES -->
     <section class="features">
         <h2>¿Por qué jugar en Villa Carlos Paz | Cordoba RP?</h2>
 
